--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 
 go:
   - 1.7
+  - 1.8
   - tip
 
 matrix:
@@ -15,10 +16,8 @@ matrix:
 install:
   - go get github.com/onsi/ginkgo
   - go get github.com/onsi/gomega
-  - go get gopkg.in/redis.v5
-  - go get gopkg.in/go-redis/rate.v5
+  - go get github.com/go-redis/redis
+  - go get github.com/go-redis/rate
   - go get gopkg.in/vmihailenco/msgpack.v2
   - go get github.com/iron-io/iron_go3/mq
   - go get github.com/aws/aws-sdk-go/service/sqs
-  - mkdir -p $HOME/gopath/src/gopkg.in
-  - mv `pwd` $HOME/gopath/src/gopkg.in/msgqueue.v1
