--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - go get github.com/onsi/ginkgo
   - go get github.com/onsi/gomega
   - go get github.com/go-redis/redis
-  - go get github.com/go-redis/rate
+  - go get github.com/go-redis/redis_rate
   - go get github.com/bsm/redis-lock
   - go get gopkg.in/vmihailenco/msgpack.v2
   - go get github.com/iron-io/iron_go3/mq
