--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ install:
   - go get github.com/go-redis/redis
   - go get github.com/go-redis/redis_rate
   - go get github.com/bsm/redis-lock
-  - go get gopkg.in/vmihailenco/msgpack.v2
+  - go get github.com/vmihailenco/msgpack
   - go get github.com/iron-io/iron_go3/mq
   - go get github.com/aws/aws-sdk-go/service/sqs
