--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ services:
   - redis-server
 
 go:
-  - 1.9.x
-  - 1.10.x
+  - 1.11.x
+  - 1.12.x
   - tip
 
 matrix:
@@ -14,13 +14,14 @@ matrix:
     - go: tip
 
 install:
-  - go get github.com/onsi/ginkgo
-  - go get github.com/onsi/gomega
   - go get github.com/go-redis/redis
   - go get github.com/go-redis/redis_rate
   - go get github.com/bsm/redis-lock
   - go get github.com/vmihailenco/msgpack
   - go get github.com/iron-io/iron_go3/mq
   - go get github.com/aws/aws-sdk-go/service/sqs
-  - go get github.com/golang/snappy
+  - go get github.com/valyala/gozstd
   - go get github.com/hashicorp/golang-lru/simplelru
+  - go get github.com/satori/go.uuid
+  - go get github.com/onsi/ginkgo
+  - go get github.com/onsi/gomega
