--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 sudo: false
 language: go
 
@@ -13,16 +14,7 @@ matrix:
   allow_failures:
     - go: tip
 
-install:
-  - go get github.com/go-redis/redis
-  - go get github.com/go-redis/redis_rate
-  - go get github.com/bsm/redis-lock
-  - go get github.com/vmihailenco/msgpack
-  - go get github.com/iron-io/iron_go3/mq
-  - go get github.com/aws/aws-sdk-go/service/sqs
-  - go get github.com/valyala/gozstd
-  - go get github.com/hashicorp/golang-lru/simplelru
-  - go get github.com/satori/go.uuid
-  - go get github.com/caio/go-tdigest
-  - go get github.com/onsi/ginkgo
-  - go get github.com/onsi/gomega
+env:
+  - GO111MODULE=on
+
+go_import_path: github.com/vmihailenco/taskq
